--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,28 +21,21 @@ html {
   scroll-behavior: smooth;
 }
 
+html::-webkit-scrollbar,
+textarea::-webkit-scrollbar,
 .section::-webkit-scrollbar {
   width: 10px;
 }
 
+html::-webkit-scrollbar-track,
+textarea::-webkit-scrollbar-track,
 .section::-webkit-scrollbar-track {
   background-color: #0e2128;
 }
 
+html::-webkit-scrollbar-thumb,
+textarea::-webkit-scrollbar-thumb,
 .section::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #59899d;
-}
-
-html::-webkit-scrollbar {
-  width: 10px;
-}
-
-html::-webkit-scrollbar-track {
-  background-color: #0e2128;
-}
-
-html::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: #59899d;
 }
